<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:paddingHorizontal="12dp">

    <ImageView
        android:id="@+id/temp_img"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_marginStart="-10dp"
        android:gravity="start"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="50dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Jan 31" />

    <TextView
        android:id="@+id/time_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/time_sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sunrise: "/>

    <TextView
        android:id="@+id/time_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/time_sunset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Sunset: "/>

    <TextView
        android:id="@+id/temp_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:text="@string/temp_day"
        app:layout_constraintStart_toEndOf="@id/temp_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_Hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="5dp"
        android:text="@string/temp_max"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/temp_img"
        tools:text="High: "/>

    <TextView
        android:id="@+id/temp_Lo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/temp_min"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/temp_Hi"
        tools:text="Low: "/>

</androidx.constraintlayout.widget.ConstraintLayout>