<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/currentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.example.weatherapp.CurrentConditionFragment">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/st_paul_mn"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/temp"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <ImageView
        android:id="@+id/temp_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="@id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/temp"
        app:layout_constraintTop_toTopOf="@id/temp" />

    <TextView
        android:id="@+id/temp_feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_feel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/temp"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp" />

    <TextView
        android:id="@+id/temp_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/temp_low"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp_feel" />

    <TextView
        android:id="@+id/temp_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_high"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp_low" />

    <TextView
        android:id="@+id/temp_humid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_humid"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp_high" />

    <TextView
        android:id="@+id/temp_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_pressure"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp_humid" />

    <Button
        android:id="@+id/forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_button"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp_pressure"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>