<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cloud">

    <TextView
        android:id="@+id/input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="150dp"
        android:text="@string/inputZipText"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_button"/>

    <TextView
        android:id="@+id/OR"
        android:text="OR"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_button"/>

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="6dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zipCode"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OR"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/notification_button"
        android:layout_width="331dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:text="@string/notificationOn"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

    <ImageButton
        android:id="@+id/bell_button"
        android:layout_width="31dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
